--- a/index.html
+++ b/index.html
@@ -100,6 +100,9 @@
           const lat = record.fields.Latitude;
           const lon = record.fields.Longitude;
           const wish = record.fields.Wish;
+
+          if (!wish || !lat || !lon) return;
+          
           new mapboxgl.Marker({ color: "#FFD700" })
             .setLngLat([lon, lat])
             .setPopup(new mapboxgl.Popup().setText(wish))
