--- a/index.html
+++ b/index.html
@@ -74,6 +74,12 @@
         const wish = document.getElementById('wishInput').value;
         const lat = pos.coords.latitude;
         const lon = pos.coords.longitude;
+
+         // 🔮 彩蛋关键词判断
+    const keywords = ['爱', '和平', '奇迹', '健康', '发财'];
+    if (keywords.some(k => wish.toLowerCase().includes(k))) {
+      triggerFirework();
+    }
         
 
         fetch('/api/submit', {
@@ -94,39 +100,86 @@
     }
 
     // Fetch wishes on load
+
   fetch('/api/wishes')
-  .then(res => res.json())
-  .then(data => {
+    .then(res => res.json())
+    .then(data => {
+      const grouped = {};
+
+    // 聚合愿望
     data.records.forEach(record => {
       const fields = record.fields;
-      const lat = fields.Latitude;
-      const lon = fields.Longitude;
-      const wish = fields.Wish;
+      const key = `${fields.Latitude},${fields.Longitude}`;
+      if (!grouped[key]) grouped[key] = [];
+      grouped[key].push(fields.Wish);
+    });
 
-      console.log("📍 加载愿望：", { wish, lat, lon });
+    // 渲染 marker
+    Object.keys(grouped).forEach(key => {
+      const [lat, lon] = key.split(',').map(Number);
+      const wishes = grouped[key];
 
-      if (!wish || !lat || !lon) {
-        console.warn("❗️字段缺失，跳过：", fields);
-        return;
-      }
+      const popupContent = wishes
+        .map((wish, i) => `<div style="margin-bottom: 6px;">💫 ${i + 1}. ${wish}</div>`)
+        .join('');
 
       new mapboxgl.Marker({ color: "#FFD700" })
         .setLngLat([lon, lat])
-        .setPopup(new mapboxgl.Popup({ offset: 25 }).setHTML(`<div style="font-size:16px;color:#fff;">${wish}</div>`))
         .setPopup(
-  new mapboxgl.Popup({
-          offset: 25,
-          maxWidth: "200px" // 解决宽度限制问题
-        }).setHTML(`<div style="color: white; font-size: 14px; padding: 4px;">${wish || '愿望加载失败 ❌'}</div>`)
-      )
-
-
+          new mapboxgl.Popup({ offset: 25 })
+            .setHTML(`
+              <div style="
+                background: #fff; 
+                color: #000; 
+                padding: 12px; 
+                border-radius: 10px; 
+                box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+                font-size: 14px;
+                max-width: 220px;
+              ">
+                ${popupContent}
+              </div>
+            `)
+        )
         .addTo(map);
     });
-  })
+  });
+
+
+
+
+
+
+    
   .catch(err => {
     console.error("❌ 获取愿望失败：", err);
   });
+
+
+  // 🎆 彩蛋动画函数
+function triggerFirework() {
+  const boom = document.createElement('div');
+  boom.innerText = '🎆';
+  boom.style.position = 'fixed';
+  boom.style.fontSize = '48px';
+  boom.style.animation = 'boom 1s ease-out forwards';
+  boom.style.top = '50%';
+  boom.style.left = '50%';
+  boom.style.transform = 'translate(-50%, -50%)';
+  boom.style.zIndex = 9999;
+  document.body.appendChild(boom);
+  setTimeout(() => boom.remove(), 1000);
+}
+
+// 💫 动画样式
+const style = document.createElement('style');
+style.innerHTML = `
+  @keyframes boom {
+    0% { transform: scale(0.5) translate(-50%, -50%); opacity: 0.9; }
+    100% { transform: scale(2) translate(-50%, -50%); opacity: 0; }
+  }
+`;
+document.head.appendChild(style);
 
     </script>Add commentMore actions
 </body>
