--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -69,18 +68,18 @@
       zoom: 2
     });
 
+    // 提交愿望
     function submitWish() {
       navigator.geolocation.getCurrentPosition(pos => {
         const wish = document.getElementById('wishInput').value;
         const lat = pos.coords.latitude;
         const lon = pos.coords.longitude;
 
-         // 🔮 彩蛋关键词判断
-    const keywords = ['爱', '和平', '奇迹', '健康', '发财'];
-    if (keywords.some(k => wish.toLowerCase().includes(k))) {
-      triggerFirework();
-    }
-        
+        // 彩蛋关键词触发
+        const keywords = ['爱', '和平', '奇迹', '健康', '发财'];
+        if (keywords.some(k => wish.toLowerCase().includes(k))) {
+          triggerFirework();
+        }
 
         fetch('/api/submit', {
           method: 'POST',
@@ -99,91 +98,80 @@
       });
     }
 
-    // Fetch wishes on load
+    // 加载愿望并展示在地图上
+    fetch('/api/wishes')
+      .then(res => res.json())
+      .then(data => {
+        const grouped = {};
 
-  fetch('/api/wishes')
-    .then(res => res.json())
-    .then(data => {
-      const grouped = {};
+        data.records.forEach(record => {
+          const fields = record.fields;
+          const key = `${fields.Latitude},${fields.Longitude}`;
+          if (!grouped[key]) grouped[key] = [];
+          grouped[key].push(fields.Wish);
+        });
 
-    // 聚合愿望
-    data.records.forEach(record => {
-      const fields = record.fields;
-      const key = `${fields.Latitude},${fields.Longitude}`;
-      if (!grouped[key]) grouped[key] = [];
-      grouped[key].push(fields.Wish);
-    });
+        Object.keys(grouped).forEach(key => {
+          const [lat, lon] = key.split(',').map(Number);
+          const wishes = grouped[key];
 
-    // 渲染 marker
-    Object.keys(grouped).forEach(key => {
-      const [lat, lon] = key.split(',').map(Number);
-      const wishes = grouped[key];
+          const popupContent = wishes
+            .map((wish, i) => `<div style="margin-bottom: 6px;">💫 ${i + 1}. ${wish}</div>`)
+            .join('');
 
-      const popupContent = wishes
-        .map((wish, i) => `<div style="margin-bottom: 6px;">💫 ${i + 1}. ${wish}</div>`)
-        .join('');
+          new mapboxgl.Marker({ color: "#FFD700" })
+            .setLngLat([lon, lat])
+            .setPopup(
+              new mapboxgl.Popup({ offset: 25 })
+                .setHTML(`
+                  <div style="
+                    background: #fff; 
+                    color: #000; 
+                    padding: 12px; 
+                    border-radius: 10px; 
+                    box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+                    font-size: 14px;
+                    max-width: 220px;
+                  ">
+                    ${popupContent}
+                  </div>
+                `)
+            )
+            .addTo(map);
+        });
+      })
+      .catch(err => {
+        console.error("❌ 获取愿望失败：", err);
+      });
 
-      new mapboxgl.Marker({ color: "#FFD700" })
-        .setLngLat([lon, lat])
-        .setPopup(
-          new mapboxgl.Popup({ offset: 25 })
-            .setHTML(`
-              <div style="
-                background: #fff; 
-                color: #000; 
-                padding: 12px; 
-                border-radius: 10px; 
-                box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-                font-size: 14px;
-                max-width: 220px;
-              ">
-                ${popupContent}
-              </div>
-            `)
-        )
-        .addTo(map);
-    });
-  });
+    // 彩蛋动画函数
+    function triggerFirework() {
+      const boom = document.createElement('div');
+      boom.innerText = '🎆';
+      boom.style.position = 'fixed';
+      boom.style.fontSize = '48px';
+      boom.style.animation = 'boom 1s ease-out forwards';
+      boom.style.top = '50%';
+      boom.style.left = '50%';
+      boom.style.transform = 'translate(-50%, -50%)';
+      boom.style.zIndex = 9999;
+      document.body.appendChild(boom);
+      setTimeout(() => boom.remove(), 1000);
+    }
 
-
-
-
-
-
-    
-  .catch(err => {
-    console.error("❌ 获取愿望失败：", err);
-  });
-
-
-  // 🎆 彩蛋动画函数
-function triggerFirework() {
-  const boom = document.createElement('div');
-  boom.innerText = '🎆';
-  boom.style.position = 'fixed';
-  boom.style.fontSize = '48px';
-  boom.style.animation = 'boom 1s ease-out forwards';
-  boom.style.top = '50%';
-  boom.style.left = '50%';
-  boom.style.transform = 'translate(-50%, -50%)';
-  boom.style.zIndex = 9999;
-  document.body.appendChild(boom);
-  setTimeout(() => boom.remove(), 1000);
-}
-
-// 💫 动画样式
-const style = document.createElement('style');
-style.innerHTML = `
-  @keyframes boom {
-    0% { transform: scale(0.5) translate(-50%, -50%); opacity: 0.9; }
-    100% { transform: scale(2) translate(-50%, -50%); opacity: 0; }
-  }
-`;
-document.head.appendChild(style);
-
-    </script>Add commentMore actions
+    // 动画样式注入
+    const style = document.createElement('style');
+    style.innerHTML = `
+      @keyframes boom {
+        0% { transform: scale(0.5) translate(-50%, -50%); opacity: 0.9; }
+        100% { transform: scale(2) translate(-50%, -50%); opacity: 0; }
+      }
+    `;
+    document.head.appendChild(style);
+  </script>
 </body>
 </html>
+
 
 
 
