--- a/index.html
+++ b/index.html
@@ -130,8 +130,12 @@
                     padding: 12px; 
                     border-radius: 10px; 
                     box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-                    font-size: 14px;
-                    max-width: 220px;
+                    font-size: 13px;
+                    line-height: 1.4;
+                    max-width: 240px;
+                    max-height: 140px;
+                    overflow-y: auto;
+                    
                   ">
                     ${popupContent}
                   </div>
