--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 .setHTML(`
                   <div style="
                     background: #fff; 
-                    color: #000; 
+                    color: #000; !important; 
                     padding: 12px; 
                     border-radius: 10px; 
                     box-shadow: 0 4px 8px rgba(0,0,0,0.2);
